# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1444 2010-09-29 11:16:42 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
3.0.0 beta5 2010-??-??
 - 2010-09-29 Fixed bug#6019 - Choosing a search template does nothing.
 - 2010-09-29 Fixed bug#6033 - Too many toolbar icons shown by default.
    Toolbar shortcuts are not shown by default.
    Toolbar items for tickets (such as locked tickets) are only shown if
    they have active tickets.
 - 2010-09-29 Fixed bug#6032 - Customer History context settings not working.
 - 2010-09-28 Fixed bug#5909 - Add link list of predefined answers.
 - 2010-09-28 Fixed bug#6021 - Ticket Types are still displayed if they're invalid.
 - 2010-09-28 Fixed bug#4732 - Mysql table index not used when LOWER()
    is used in queries for customer_user.login. There is now a new flag CaseSensitive
    in the customer DB settings. Setting this to 1 will improve performance
    dramatically on large databases.
 - 2010-09-24 Fixed bug#6007 - Free field content not saved.

3.0.0 beta4 2010-09-27
 - 2010-09-24 Updated Russian translation file, thanks to Eugene Kungurov!
 - 2010-09-24 Fixed bug#5655 - In Article Zoom, after a new article got created
    and page reloads, new article is shown as new. It's confusing.
 - 2010-09-24 Fixed bug#5848 - Wrong characters in Czech language.
 - 2010-09-24 Updated Czech translation file, thanks to Pavel!
 - 2010-09-24 Fixed bug#5962 - ToolBarModule and TicketSearchProfile, management
    of search profiles is not working correctly.
 - 2010-09-23 Fixed bug#5950 - Customer History not shown in Change Customer View.
 - 2010-09-23 Changed ResponseFormat to TOFU (what people expect).
 - 2010-09-23 Fixed bug#3515 - AgentTicketMove standard "Note" and "Subject" cannot be configured.