@@ -2,13 +2,15 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1444 2010-09-29 11:16:42 martin Exp $
+# $Id: CHANGES,v 1.1445 2010-09-29 14:57:57 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 3.0.0 beta5 2010-??-??
+ - 2010-09-29 Fixed bug#6017 - QueueLookup function returns wrong QueueID if a
+    queue name was updated.
  - 2010-09-29 Fixed bug#6019 - Choosing a search template does nothing.
  - 2010-09-29 Fixed bug#6033 - Too many toolbar icons shown by default.
     Toolbar shortcuts are not shown by default.
